# LeetConnect

./: CONTRIBUTING.md  LICENSE.md  README.md  docker-compose.yml  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  manage.py  pyproject.toml  requirements.txt  start.sh
backend/api/: queries.py  urls.py  utils.py  views.py
backend/config/: settings.py  urls.py
backend/users/: admin.py  models.py
extension-ui/: .dockerignore  Dockerfile  index.html  manifest.json  package-lock.json  package.json  vite.config.js
extension-ui/content-scripts/: App.jsx  SearchBox.css  SearchBox.jsx  main.jsx  utils.js
extension-ui/src/: App.jsx  index.css
extension-ui/src/components/: FollowButton.jsx  FollowingList.jsx  UnFollowButton.jsx
extension-ui/src/utils/: BASE_URL.js
